# bloc3-PFE-backend

./: .env.example  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  README.md  backend-service-api.yaml  compose.yml  request.http
initdb/: createdb.sql  createtable.sql  createuser.sql  insert.sql
migrations/: 1_createtables.sql  2_insertdata.sql  3_insert_demo.sql  3_inserttest.sql
requests/: answers.http  auth.http  companies.http  forms.http  onboarding.http  questions.http  scores.http  stats.http
src/: auth.rs  authorization.rs  database.rs  main.rs  users.rs
src/database/: database.rs  state.rs
src/errors/: answer_error.rs  autherror.rs  company_error.rs  form_error.rs  globalerror.rs  mod.rs  questionserror.rs  responserror.rs  score_error.rs
src/middlewares/: authorization.rs
src/models/: answer.rs  answers.rs  answerusers.rs  claims.rs  company.rs  create_answer.rs  createuser.rs  credentials.rs  form.rs  mod.rs  onboarding.rs  question.rs  score.rs  stats.rs  template.rs  unsafecredentials.rs  user.rs
src/routes/: answers.rs  auth.rs  companies.rs  forms.rs  mod.rs  onboarding.rs  questions.rs  scores.rs  stats.rs
src/services/: answers.rs  auth.rs  company.rs  forms.rs  mod.rs  onboarding.rs  questions.rs  score.rs  stats.rs
