[package]
name = "pfe_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
bcrypt = "0.16.0"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tower-http = "0.6.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
