[package]
name = "pfe_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] }
bcrypt = "0.16.0"
dotenvy = "0.15.7"
serde = "1.0.215"
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["runtime-tokio-rustls", "postgres"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
jsonwebtoken = "9.2.0"
chrono = "0.4.34"
